--- a/index.html
+++ b/index.html
@@ -16,69 +16,73 @@
         border: solid 2px ;    
     }
 </style>
-<body class="mt-4 pt-4">
-    <div class="mt-5">
-        <div class="container m-auto row d-flex bg-write cont" >
-            <form class="col-5 row mt-3">
-                <div class="col-12">
-                    <label for="introduce_leg" class="form-label text-black">Lenguge</label>
-                    <input type="text" class="form-control mb-2" id="introduce_leg"required>
+<body class="mt-4 pt-4 ">
+    <div class="mt-5 ">
+        <div class="container m-auto row bg-write cont" >
+            <div class="row">
+                <div class="mt-3 col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                    <form>
+                        <div>
+                            <label for="introduce_leg" class="form-label text-black">Lenguaje</label>
+                            <input type="text" class="form-control mb-2" id="introduce_leg"required>
+                        </div>
+                        <div>
+                            <label for="introduce_cant_person" class="text-black">Cantidad de programadores</label>
+                            <input type="number" class="form-control mt-2 mb-2" id="introduce_cant_person" required>
+                        </div>
+                        <div>
+                            <label for="intro_coment" class="form-label text-black mb-2">Descripción</label>
+                            <textarea class="form-control" id="intro_coment" style="height: 10rem"></textarea>
+                        </div>
+                        <div class= "d-flex justify-content-center">
+                            <button type="button" class="btn btn-primary m-3 px-4">Agregar</button>
+                            <button type="button" class="btn btn-danger m-3 px-4">Eliminar</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="col-12">
-                    <label for="introduce_cant_person" class="text-black">Cantidad de programadores</label>
-                    <input type="number" class="form-control mt-2 mb-2" id="introduce_cant_person" required>
+                <div class="mt-3 col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                    <table class="table table-dark table-striped text-center mt-5">
+                        <thead>
+                            <tr>
+                                <th scope="col"colspan ="2">#</th>
+                                <th scope="col"colspan="2"class="text-center">Lenguaje</th>
+                                <th scope="col"class="text-center">Cantidad de programadores</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row"colspan="2">1</th>
+                                <td colspan="2"class="text-center">Javascript</td>
+                                <td class="text-center">1000</td>
+                            </tr>
+                            <tr>
+                                <th scope="row"colspan="2">2</th>
+                                <td colspan="2"class="text-center">Python</td>
+                                <td class="text-center">500</td>
+                            </tr>
+                            <tr>
+                                <th scope="row"colspan="2">3</th>
+                                <td colspan="2" class="text-center">C#</td>
+                                <td class="text-center">300</td>
+                            </tr>
+                            <tr>
+                                <th scope="row"colspan="2">4</th>
+                                <td colspan="2" class="text-center">Ruby</td>
+                                <td class="text-center">300</td>
+                            </tr>
+                            <tr>
+                                <th scope="row"colspan="2">5</th>
+                                <td colspan="2" class="text-center">Java</td>
+                                <td class="text-center">300</td>
+                            </tr>
+                            <tr>
+                                <th scope="row"colspan="2">6</th>
+                                <td colspan="2" class="text-center">Go</td>
+                                <td class="text-center">300</td>
+                            </tr>
+                        </tbody>
+                    </table> 
                 </div>
-                <div class="col-12">
-                    <label for="intro_coment" class="form-label text-black mb-2">Descripción</label>
-                    <textarea class="form-control" id="intro_coment" style="height: 10rem"></textarea>
-                </div>
-                <div class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-primary m-3 px-5">Agregar</button>
-                    <button type="button" class="btn btn-danger m-3 px-5">Eliminar</button>
-                </div>
-            </form>
-            <div class="col-7 mt-4 ">
-                <table class="table table-dark table-striped text-center mt-5">
-                    <thead>
-                        <tr>
-                            <th scope="col"colspan ="2">#</th>
-                            <th scope="col"colspan="2"class="text-center">Lenguaje</th>
-                            <th scope="col"class="text-center">Cantidad de programadores</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row"colspan="2">1</th>
-                            <td colspan="2"class="text-center">Javascript</td>
-                            <td class="text-center">1000</td>
-                        </tr>
-                        <tr>
-                            <th scope="row"colspan="2">2</th>
-                            <td colspan="2"class="text-center">Python</td>
-                            <td class="text-center">500</td>
-                        </tr>
-                        <tr>
-                            <th scope="row"colspan="2">3</th>
-                            <td colspan="2" class="text-center">C#</td>
-                            <td class="text-center">300</td>
-                        </tr>
-                        <tr>
-                            <th scope="row"colspan="2">4</th>
-                            <td colspan="2" class="text-center">Ruby</td>
-                            <td class="text-center">300</td>
-                        </tr>
-                        <tr>
-                            <th scope="row"colspan="2">5</th>
-                            <td colspan="2" class="text-center">Java</td>
-                            <td class="text-center">300</td>
-                        </tr>
-                        <tr>
-                            <th scope="row"colspan="2">6</th>
-                            <td colspan="2" class="text-center">Go</td>
-                            <td class="text-center">300</td>
-                        </tr>
-                    </tbody>
-                </table> 
             </div>     
         </div>
     </div>
